// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup modal body for concern suggestion 1`] = `
<div
  className="acceptModalBody"
>
  <div
    className="acceptModalTitle noMargin"
  >
    Reason for dismissing this suggestion
  </div>
  <div
    className="acceptModalSubtitle"
  >
    Select from one of the available options
  </div>
  <div
    className="acceptModalDropdown"
  >
    <select
      className="select"
      disabled={undefined}
      name="dismissedReason"
      onChange={[Function]}
      required={undefined}
      value="Because"
    >
      <option
        disabled={true}
        value=""
      >
        
      </option>
      <option
        disabled={undefined}
        value="not applicable"
      >
        not applicable
      </option>
      <option
        disabled={undefined}
        value="too much work"
      >
        too much work
      </option>
      <option
        disabled={undefined}
        value="dangerous"
      >
        dangerous
      </option>
    </select>
  </div>
  <div
    className="acceptModalButtons"
  >
    <button
      className="button white small"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span>
          Cancel
        </span>
      </span>
    </button>
    <button
      className="button small"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span>
          Dismiss concern
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders popup modal body for goal suggestion 1`] = `
<div
  className="acceptModalBody"
>
  <div
    className="acceptModalTitle noMargin"
  >
    Reason for dismissing this suggestion
  </div>
  <div
    className="acceptModalSubtitle"
  >
    Select from one of the available options
  </div>
  <div
    className="acceptModalDropdown"
  >
    <select
      className="select"
      disabled={undefined}
      name="dismissedReason"
      onChange={[Function]}
      required={undefined}
      value="Because"
    >
      <option
        disabled={true}
        value=""
      >
        
      </option>
      <option
        disabled={undefined}
        value="not applicable"
      >
        not applicable
      </option>
      <option
        disabled={undefined}
        value="too much work"
      >
        too much work
      </option>
      <option
        disabled={undefined}
        value="dangerous"
      >
        dangerous
      </option>
    </select>
  </div>
  <div
    className="acceptModalButtons"
  >
    <button
      className="button white small"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span>
          Cancel
        </span>
      </span>
    </button>
    <button
      className="button small"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="flex"
      >
        <span>
          Dismiss goal
        </span>
      </span>
    </button>
  </div>
</div>
`;
